dom/media/Tracing.cpp
@@ -13,17 +13,26 @@
 using namespace mozilla;
 
 mozilla::AsyncLogger gAudioCallbackTraceLogger("AudioCallbackTracing");
-static Atomic<bool> gTracingStarted(false);
+static std::atomic<int> gTracingStarted(0);
 
 void StartAudioCallbackTracing() {
 #ifdef TRACING
-  if (gTracingStarted) {
-    return;
+  int cnt = gTracingStarted.fetch_add(1, std::memory_order_seq_cst);
+  if (cnt == 0) {
+    // This is a noop if the logger has not been enabled.
+    gAudioCallbackTraceLogger.Start();
+    gAudioCallbackTraceLogger.Log("[");
   }
-  // This is a noop if the logger has not been enabled.
-  gAudioCallbackTraceLogger.Start();
-  gAudioCallbackTraceLogger.Log("[");
-  gTracingStarted = true;
+#endif
+}
+
+void StopAudioCallbackTracing() {
+#ifdef TRACING
+  int cnt = gTracingStarted.fetch_sub(1, std::memory_order_seq_cst);
+  if (cnt == 1) {
+    // This is a noop if the logger has not been enabled.
+    gAudioCallbackTraceLogger.Stop();
+  }
 #endif
 }
 
